# home_work_22_1

./: .gitignore  README.md  pyproject.toml
ShopOnline/: settings.py  urls.py
product/: urls.py
product/migrations/: 0001_initial.py  0002_product_active.py  0003_version.py
product/templates/product/: base.html  product_list.html
