[tool.poetry]
name = "shoponline"
version = "0.1.0"
description = ""
authors = ["sergey <serglapinofff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
crispy-bootstrap5 = "^2023.10"
pytils = "^0.4.1"
pillow = "^10.1.0"
self = "^2020.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
